--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ logging.level.=error
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mail
-spring.mail.password=password
+spring.mail.username=khalidtnaji@gmail.com
+spring.mail.password=paradise12345
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
