--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,30 @@
 server.session.tracking-modes=cookie
 
-
-spring.main.banner-mode=off
-
-# create and drop tables and sequences, loads import.sql
+# Data Base settings
 spring.jpa.hibernate.ddl-auto=update
-
-# Oracle settings
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=WEBAPP
 spring.datasource.password=orcl
 spring.datasource.driver-class-oracle.jdbc.driver.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.show-sql=true
-# HikariCP settings
-# spring.datasource.hikari.*
 
+# HikariCP settings
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=5
 
- 
+ # Logging settings
+spring.main.banner-mode=off
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
 logging.level.=error
 
-
-
+# Mail service settings
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=khalidtnaji@gmail.com
-spring.mail.password=paradise12345
+spring.mail.password=paradise123456
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
