--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-server.port = 8090
-spring.servlet.multipart.max-file-size=5000KB
-spring.servlet.multipart.max-request-size=5000KB
-spring.datasource.url = jdbc:mysql://localhost:3306/ecommerce?serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password =
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#server.port = 8080
+#spring.servlet.multipart.max-file-size=5000KB
+#spring.servlet.multipart.max-request-size=5000KB
+#spring.datasource.url = jdbc:mysql://localhost:3306/ecommerce?serverTimezone=UTC
+#spring.datasource.username = root
+#spring.datasource.password =
+#spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto = create
+##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
